# LCDR

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  config.schema.json  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: demo.json  sample_config.json  sentiment.json  wordcounter.py
scripts/: sample_config.json  validate_config.py
src/: .env.example  chainrunner.py
tests/: test_chainrunner.py
